Use final
Use compact array notation
Remove trailing whitespace